[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moldy_muffin_OSCAR_LYSAKER"
version = "0.0.1"
authors = [
    { name="Oscar Lysaker", email="oscarlysaker@live.com" },
]
description = "A package with handy scripts and tools I use in my projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]